# HelloWorld

./: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h  Hello2.cpp  main.cpp
.github/workflows/: build_cmake.yml  windows.yml
